Media query en proceso

--- a/inicio.html
+++ b/inicio.html
@@ -89,14 +89,16 @@
         </section>
     </main>
     <footer class="footer">
-        <ul class="footer_enlaces">
-            <li>
-                <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
-                <a href="inicio.html" target="_self">Sobre nosotros</a>
-                <a href="inicio.html" target="_self">Cookies</a>
-                <a href="inicio.html" target="_self">Terminos de servicio</a>
-            </li>
-        </ul>
+        <nav>
+            <ul class="footer_enlaces">
+                <li>
+                    <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
+                    <a href="inicio.html" target="_self">Sobre nosotros</a>
+                    <a href="inicio.html" target="_self">Cookies</a>
+                    <a href="inicio.html" target="_self">Terminos de servicio</a>
+                </li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
