--- a/productos.html
+++ b/productos.html
@@ -34,7 +34,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_lambo_huracan.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h2 class="titulo_producto">Lamborghini Huracán</h2>
+                    <h2 class="titulito_producto">Lamborghini Huracán</h2>
                     <p>216.444€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -42,7 +42,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_bugatti-chiron-super-sport.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h2 class="titulo_producto">Bugatti Chiron Super Sport</h2>
+                    <h2 class="titulito_producto">Bugatti Chiron Super Sport</h2>
                     <p>2.402.020€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -50,7 +50,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_aston-martin-vanquish.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h2 class="titulo_producto">Aston Martin Vanquish</h2>
+                    <h2 class="titulito_producto">Aston Martin Vanquish</h2>
                     <p>1.220.500€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -60,7 +60,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_pagani-imola-roadster.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h2 class="titulo_producto">Pagani Imola Roadster</h2>
+                    <h2 class="titulito_producto">Pagani Imola Roadster</h2>
                     <p>5.570.900€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -68,7 +68,7 @@
             <article class="productos_article">
                 <img class="imagen_producto_ferrari" src="/assets/imagenes/producto_ferrari_458_2011.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h2 class="titulo_producto">Ferrari 458 2011</h2>
+                    <h2 class="titulito_producto">Ferrari 458 2011</h2>
                     <p>354.600€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -76,7 +76,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_maserati_MC20_2025.jpg" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h2 class="titulo_producto">Maserati MC20 2025</h2>
+                    <h2 class="titulito_producto">Maserati MC20 2025</h2>
                     <p>215.000€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -107,14 +107,16 @@
         </section>
     </main>
     <footer class="footer">
-        <ul class="footer_enlaces">
-            <li>
-                <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
-                <a href="inicio.html" target="_self">Sobre nosotros</a>
-                <a href="inicio.html" target="_self">Cookies</a>
-                <a href="inicio.html" target="_self">Terminos de servicio</a>
-            </li>
-        </ul>
+        <nav>
+            <ul class="footer_enlaces">
+                <li>
+                    <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
+                    <a href="inicio.html" target="_self">Sobre nosotros</a>
+                    <a href="inicio.html" target="_self">Cookies</a>
+                    <a href="inicio.html" target="_self">Terminos de servicio</a>
+                </li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
