--- a/contacto.html
+++ b/contacto.html
@@ -30,63 +30,58 @@
         </nav>
     </header>
     <main class="main">
+
         <h1 class="titulo_nuestras_redes">Nuestras redes sociales:</h1>
         <section class="redes_section">
             <article class="redes_article">
                 <a href="contacto.html" target="_self"><img class="red_logo" src="/assets/imagenes/facebook_logo.png" alt="Imagen de Facebook"></a>
-                <h3>MotorManiaOficial</h3>
+                <h2>MotorManiaOficial</h2>
             </article>
             <article class="redes_article">
                 <a href="contacto.html" target="_self"><img class="red_logo" src="/assets/imagenes/Instagram_logo.svg" alt="Imagen de Instagram"></a>
-                <h3>MotorManiaOficial</h3>
+                <h2>MotorManiaOficial</h2>
             </article>
             <article class="redes_article">
                 <a href="contacto.html" target="_self"><img class="red_logo" src="/assets/imagenes/twitter_logo.webp" alt="Imagen de Twitter"></a>
-                <h3>MotorManiaHub</h3>
+                <h2>MotorManiaHub</h2>
             </article>
         </section>
-        <h2 class="titulo_rellena_formulario">¡Rellena el formulario para recibir ofertas y descuentos!</h2>
-        <form class="formulario" action="/enviar" method="post">
 
-            <!--Nombre completo-->
-            <label for="nombre">Nombre completo:</label>
-            <input type="text" id="nombre" placeholder="Escribe tu nombre completo" required><br><br>
+        <h1 class="titulo_sobre_nosotros">Sobre Nosotros:</h1>
+        <section class="sobre_nosotros_section">
+            <article class="sobre_nosotros_article">
+                <h2>🌱 Origen</h2>
+                <p>MotorMania nació con la visión de ofrecer a nuestros clientes una experiencia única en la compra de vehículos, combinando calidad, variedad y precios competitivos. Desde nuestros primeros días, nos hemos enfocado en proporcionar un servicio excepcional y un catálogo que se adapta a las necesidades de todos nuestros clientes.</p>
+            </article>
+            <article class="sobre_nosotros_article">
+                <h2>📜 Historia</h2>
+                <p>Fundada en 2018, MotorMania comenzó como un pequeño concesionario local. Con el paso de los años, hemos crecido y expandido nuestro alcance, convirtiéndonos en un referente en la venta de vehículos nuevos y seminuevos. Nuestra historia está marcada por un compromiso constante con la calidad y la satisfacción de nuestros clientes.</p>
+            </article>
+            <article class="sobre_nosotros_article">
+                <h2>👤 Fundador</h2>
+                <p>MotorMania fue fundada por Mario Montes Bermúdez, un apasionado del mundo automotriz con más de 3 años de experiencia en la industria. Su visión y dedicación al servicio al cliente han sido las claves para el éxito de la empresa y su crecimiento continuo.</p>
+            </article>
+            <article class="sobre_nosotros_article">
+                <h2>📍 Localización</h2>
+                <p>Estamos ubicados en Avenida Segunda Aguada 3, Cádiz, España. Ofrecemos a nuestros clientes una experiencia de compra cómoda y accesible, tanto en nuestras instalaciones físicas como a través de nuestra plataforma online, que permite realizar compras desde cualquier lugar.</p>
+            </article>
+        </section>
+        <section class="sobre_nosotros_section">
+            <article class="sobre_nosotros_article">
+                <h2>📞 Teléfono</h2>
+                <p>Para más información, no dudes en contactarnos al número 676 44 57 38. Nuestro equipo estará encantado de atenderte y ayudarte a encontrar el vehículo ideal.</p>
+            </article>
+            <article class="sobre_nosotros_article">
+                <h2>📧 Correo electrónico</h2>
+                <p>Si prefieres contactarnos por correo electrónico, puedes enviarnos un mensaje a motormania@gmail.com. Responderemos a tu consulta lo antes posible.</p>
+            </article>
+            <article class="sobre_nosotros_article">
+                <h2>🌎 Alcance</h2>
+                <p>En MotorMania, no solo ofrecemos nuestros vehículos en España, también tenemos alcance internacional. Gracias a nuestra plataforma en línea, clientes de diferentes localidades pueden disfrutar de nuestro servicio y productos de calidad.</p>
+            </article>
+        </section>
 
-            <!--Correo electrónico-->
-            <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" placeholder="Escribe tu correo electrónico" required><br><br>
-
-            <!--Número de teléfono-->
-            <label for="telefono">Número de teléfono:</label>
-            <input type="tel" id="telefono" placeholder="Escribe tu número de teléfono" required><br><br>
-
-            <!--Dirección-->
-            <label for="direccion">Dirección:</label>
-            <input type="text" id="direccion" placeholder="Escribe tu dirección" required><br><br>
-
-            <!--Código postal-->
-            <label for="codigo_postal">Código postal:</label>
-            <input type="text" id="codigo_postal" placeholder="Escribe tu código postal" required><br><br>
-
-            <!--Género-->
-            <label for="genero">Género:</label>
-            <select id="genero" name="genero">
-                <option value="">Seleccione una opción</option>
-                <option value="masculino">Masculino</option>
-                <option value="femenino">Femenino</option>
-                <option value="otro">Otro</option>
-            </select>
-
-            <!--Botón de enviar-->
-            <button class="form_boton_enviar" type="submit">Enviar</button>
-
-            <!--"type" para obligar a introducir el tipo de carácter en el campo deseado-->
-            <!--"placeholder" muestra un texto en el interior del campo para decirle al usuario lo que debe introducir-->
-            <!--"required" obliga al usuario a completar el campo, sino no puede enviarse el formulario-->
-            <!--"id" identifica el campo con un nombre para la etiqueta <label>-->
-        </form>
-
-        <h3 class="titulo_preguntas_frecuentes">Preguntas Frecuentes:</h3>
+        <h1 class="titulo_preguntas_frecuentes">Preguntas Frecuentes:</h1>
         <section class="preguntas_section">
             <article class="preguntas_article">
                 <h4>¿Cuál es el horario de atención?</h4>
@@ -101,6 +96,7 @@
                 <p>¡Por supuesto! Aparte de español, también ofrecemos soporte en inglés</p>
             </article>
         </section>
+
     </main>
     <footer class="footer">
         <nav>
