--- a/inicio.html
+++ b/inicio.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <!-- target="_self" añadidos en todos los enlaces para que se abran en la misma pestaña del navegador -->
+    <!-- Header: Es esencial en la página web, representa la cabecera de la página, he usado esta etiqueta para poner el logo y la navegación principal (enlaces y barra de búsqueda) -->
     <header class="header">
         <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
         <form class="barra_busqueda">
@@ -16,7 +17,7 @@
             <button class="barra_busqueda_button" type="submit">🔍</button>
         </form>
         <nav>
-            <!-- Enlaces -->
+        <!-- Enlaces -->
             <ul class="menu">
                 <li>
                 <a href="inicio.html" target="_self">Inicio</a>
@@ -29,9 +30,13 @@
             </ul>
         </nav>
     </header>
+    <!-- Main: Representa el contenido principal de la página, he usado esta etiqueta para contener todas las secciones y artículos de mi página -->
     <main class="main">
+
         <h1 class="titulo_inicio_bienvenido">¡Bienvenido a Motor Mania!</h1>
+        <!-- Section: Agrupa contenido relacionado entre sí, he usado esta etiqueta para contener los diferentes artículos de mi página -->
         <section class="parrafo_inicio_section">
+            <!-- Article: Agrupa contenido independiente, he usado esta etiqueta para agrupar otras etiquetas como <h2>, <img>, <p>... Y así formar encabezados autónomos -->
             <article class="animacion_inicio_article">
                 <img class="animacion_inicio_imagen" src="/assets/imagenes/lamborghini-veneno.webp" alt="Lamborghini Veneno">
                 <img class="animacion_inicio_imagen" src="/assets/imagenes/animacion_inicio.jpg" alt="Maserati F1">
@@ -50,6 +55,7 @@
                     sociales.</p>
             </article>
         </section>
+
         <h1 class="titulo_confiar_en_nosotros">¿Por qué confiar en MotorMania?</h1>
         <section class="confiar_en_nosotros_section">
             <article class="confiar_en_nosotros_article">
@@ -65,6 +71,7 @@
                 <p>MotorMania te ofrece un catálogo muy extenso de vehículos a tu disposición</p>
             </article>
         </section>
+
         <h2 class="titulo_noticias">Noticias de ultima hora</h2>
         <section class="noticias_section">
             <img class="imagen_noticia" src="/assets/imagenes/lamborghini-huracan-tecnica.jpg" alt="Imagen de un coche lamborghini de una noticia">
@@ -87,7 +94,9 @@
                 <p>Con motivo de la Monterrey Car Week, Bugatti desvela un Chiron dorado muy especial con bocetos de diseño repartidos por su carrocería e interior en un trabajo que ha necesitado de dos años para terminarse. Bugatti Sur Mesure se ha convertido en la mejor aliada para todos aquellos acaudalados clientes par los que tener un simple Bugatti no es suficiente. Este departamento de personalización estenado hace relativamente poco, en 2021, ofrece posibilidades casi infinitas para crear modelos únicos, y uno de los últimos ejemplos lo tenemos en este Bugatti Chiron Super Sport, una suerte de dorado cuaderno de bocetos de diseño rodante capaz de superar los 400 km/h y que ha sido el resultado de un trabajo de dos años.</p>
             </article>
         </section>
+
     </main>
+    <!-- Footer: Muy importante en la página, representa el pie de página de la web, he usado esta etiqueta para añadir algunos enlaces que suelen estar en el pie de página de las webs -->
     <footer class="footer">
         <nav>
             <ul class="footer_enlaces">
