--- a/marcas.html
+++ b/marcas.html
@@ -8,92 +8,92 @@
 </head>
 <body>
     <!-- target="_self" añadidos en todos los enlaces para que se abran en la misma pestaña del navegador -->
-        <header class="header">
-            <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
-            <form class="barra_busqueda">
-                <label for="buscar" class="barra_busqueda_label"></label>
-                <input id="buscar" class="barra_busqueda_input" type="text" placeholder="Buscar...">
-                <button class="barra_busqueda_button" type="submit">🔍</button>
-            </form>
-            <nav>
-                <!-- Enlaces -->
-                <ul class="menu">
-                    <li>
-                        <a href="inicio.html" target="_self">Inicio</a>
-                        <a href="productos.html" target="_self">Productos</a>
-                        <a href="contacto.html" target="_self">Contacto</a>
-                        <a href="marcas.html" target="_self">Marcas</a>
-                        <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
-                        <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main class="main">
-            <h1 class="titulo_nuestra_marca_nº1">Nuestra marca colaboradora nº1:</h1>
-            <section class="marca_lamborguini_section">
-                <article class="marca_lamborguini_article">
-                    <a href="#" target="_self"><img class="marca_imagen_lamborguini" src="/assets/imagenes/Lamborghini.jpg" alt="Marca Lamborghini"></a>
-                </article>
+    <header class="header">
+        <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
+        <form class="barra_busqueda">
+            <label for="buscar" class="barra_busqueda_label"></label>
+            <input id="buscar" class="barra_busqueda_input" type="text" placeholder="Buscar...">
+            <button class="barra_busqueda_button" type="submit">🔍</button>
+        </form>
+        <nav>
+            <!-- Enlaces -->
+            <ul class="menu">
+                <li>
+                    <a href="inicio.html" target="_self">Inicio</a>
+                    <a href="productos.html" target="_self">Productos</a>
+                    <a href="contacto.html" target="_self">Contacto</a>
+                    <a href="marcas.html" target="_self">Marcas</a>
+                    <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
+                    <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <h1 class="titulo_nuestra_marca_nº1">Nuestra marca colaboradora nº1:</h1>
+        <section class="marca_lamborguini_section">
+            <article class="marca_lamborguini_article">
+                <a href="#" target="_self"><img class="marca_imagen_lamborguini" src="/assets/imagenes/Lamborghini.jpg" alt="Marca Lamborghini"></a>
                 <p>Lamborghini, sinónimo de lujo, innovación y potencia,
                     es una de las marcas más emblemáticas en el mundo de
                     los superdeportivos, y nosotros tenemos la gran oportunidad
                     de trabajar con esta potente marca y ofrecer automóviles
                     de una calidad excelente</p>
-            </section>
+            </article>
+        </section>
 
-            <section class="section_presentacion_lamborghini">
-                <h2 class="titulo_presentacion_lamborghini">"Lamborghini: La cumbre del lujo y el rendimiento"</h2>
-                <div class="div_presentacion_lamborghini">
-                    <article class="article_presentacion_lamborghini">
-                        <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Diseño.png" alt="Icono Diseño">
-                        <h3>Diseño Atemporal</h3>
-                        <p>El diseño de Lamborghini es sinónimo de exclusividad, con líneas futuristas y formas aerodinámicas.</p>
-                    </article>
-                    <article class="article_presentacion_lamborghini">
-                        <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Velocidad.png" alt="Icono Velocidad">
-                        <h3>Velocidad Extrema</h3>
-                        <p>Modelos como el Aventador alcanzan velocidades superiores a los 350 km/h, haciendo de Lamborghini un referente.</p>
-                    </article>
-                    <article class="article_presentacion_lamborghini">
-                        <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Innovacion.png" alt="Icono Innovación">
-                        <h3>Innovación Tecnológica</h3>
-                        <p>Con motores V12 y tecnologías híbridas, Lamborghini lidera en innovación en el sector automotriz.</p>
-                    </article>
-                    <article class="article_presentacion_lamborghini">
-                        <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Lujo.png" alt="Icono Lujo">
-                        <h3>Lujo Exclusivo</h3>
-                        <p>Cada detalle está cuidadosamente diseñado para ofrecer una experiencia de conducción incomparable.</p>
-                    </article>
-                </div>
-            </section>
+        <section class="section_presentacion_lamborghini">
+            <h2 class="titulo_presentacion_lamborghini">"Lamborghini: La cumbre del lujo y el rendimiento"</h2>
+            <div class="div_presentacion_lamborghini">
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Diseño.png" alt="Icono Diseño">
+                    <h3>Diseño Atemporal</h3>
+                    <p>El diseño de Lamborghini es sinónimo de exclusividad, con líneas futuristas y formas aerodinámicas.</p>
+                </article>
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Velocidad.png" alt="Icono Velocidad">
+                    <h3>Velocidad Extrema</h3>
+                    <p>Modelos como el Aventador alcanzan velocidades superiores a los 350 km/h, haciendo de Lamborghini un referente.</p>
+                </article>
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Innovacion.png" alt="Icono Innovación">
+                    <h3>Innovación Tecnológica</h3>
+                    <p>Con motores V12 y tecnologías híbridas, Lamborghini lidera en innovación en el sector automotriz.</p>
+                </article>
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Lujo.png" alt="Icono Lujo">
+                    <h3>Lujo Exclusivo</h3>
+                    <p>Cada detalle está cuidadosamente diseñado para ofrecer una experiencia de conducción incomparable.</p>
+                </article>
+            </div>
+        </section>
 
-            <h2 class="titulo_nuestras_marcas">Otras marcas colaboradoras:</h2>
-            <section class="marcas_section">
-                <article class="marcas_article">
-                    <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Ferrari.png" alt="Marca Ferrari"></a>
-                    <h3 class="marca_titulito">Ferrari</h3>
-                </article>
-                <article class="marcas_article">
-                    <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Aston-Martin.webp" alt="Marca Aston Martin"></a>
-                    <h3 class="marca_titulito">Aston Martin</h3>
-                </article>
-                <article class="marcas_article">
-                    <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Bugatti.webp" alt="Marca Bugatti"></a>
-                    <h3 class="marca_titulito">Bugatti</h3>
-                </article>
-            </section>
-            <section class="marcas_section">
-                <article class="marcas_article">
-                    <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/pagani.svg" alt="Marca Pagani"></a>
-                    <h3 class="marca_titulito">Pagani</h3>
-                </article>
-                <article class="marcas_article">
-                    <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Maserati.jpg" alt="Marca Maserati"></a>
-                    <h3 class="marca_titulito">Maserati</h3>
-                </article>
-            </section>
-        </main>
+        <h2 class="titulo_nuestras_marcas">Otras marcas colaboradoras:</h2>
+        <section class="marcas_section1">
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Ferrari.png" alt="Marca Ferrari"></a>
+                <h3 class="marca_titulito">Ferrari</h3>
+            </article>
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Aston-Martin.webp" alt="Marca Aston Martin"></a>
+                <h3 class="marca_titulito">Aston Martin</h3>
+            </article>
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Bugatti.webp" alt="Marca Bugatti"></a>
+                <h3 class="marca_titulito">Bugatti</h3>
+            </article>
+        </section>
+        <section class="marcas_section2">
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/pagani.svg" alt="Marca Pagani"></a>
+                <h3 class="marca_titulito">Pagani</h3>
+            </article>
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Maserati.jpg" alt="Marca Maserati"></a>
+                <h3 class="marca_titulito">Maserati</h3>
+            </article>
+        </section>
+    </main>
     <footer class="footer">
         <nav>
             <ul class="footer_enlaces">
