--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Productos</title>
     <link rel="stylesheet" href="/css/styles.css"> <!-- Link para hacer referencia al archivo css -->
-    <script src="script.js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <script src="js/añadir_pregunta_frecuente.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
