--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Productos</title>
     <link rel="stylesheet" href="/css/styles.css"> <!-- Link para hacer referencia al archivo css -->
-    <script src="js/añadir_pregunta_frecuente.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
@@ -163,5 +162,7 @@
             </ul>
         </nav>
     </footer>
+    <script src="js/cambiar_color_boton_comprar.js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
 </body>
 </html>
