--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Inicio</title>
     <link rel="stylesheet" href="/css/styles.css"> <!-- Link para hacer referencia al archivo css -->
-    <script src="js/añadir_pregunta_frecuente.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
@@ -110,6 +109,8 @@
             </ul>
         </nav>
     </footer>
+    <script src="js/añadir_pregunta_frecuente.js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
 </body>
 </html>
 <!--DE LA TABLA: 1 todos, 2 a,d-->
