--- a/productos.html
+++ b/productos.html
@@ -163,6 +163,7 @@
         </nav>
     </footer>
     <script src="js/cambiar_color_boton_comprar.js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <script src="js/eliminar_producto.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
 </body>
 </html>
