--- a/marcas.html
+++ b/marcas.html
@@ -106,7 +106,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="js/añadir_pregunta_frecuente.js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <script src="js/modificar_atributo_class_h3.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
 </body>
 </html>
