--- a/inicio.html
+++ b/inicio.html
@@ -78,7 +78,7 @@
             <article class="noticias_article">
                 <h4>Así es el sucesor del Lamborghini Huracán</h4>
                 <p>Así estira el sucesor del Lamborghini Huracán, que llega hasta las 10.000 vueltas. Y es que hay dudas con respecto a su cambio de motorización, y de si perderá la esencia del maravilloso motor V10. Ahora encontraremos en el Lamborghini de acceso un motor V8 híbrido. El nuevo modelo de la firma de Sant'Agata Bolognese debutará en poco más de una semana. El sonido está bajo examen, pues no sbaemos a ciencia cierta cómo sonará, y eso preocupa a los amantes de la marca. El motor V10 de 5.2 litros es uno de los motores que mejor suenan del mercado. Suceder al Huracán es complicado, muy complicado. En 2023 la marca vendió más que nunca, fue su mejor año, y se lo deben al Urus, pero también al Huracán. Estos dos Lamborghini han sostenido las ventas en los últimos años, con récord tras récord.</p>
-            </article>
+            </article>f
         </section>
         <section class="noticias_section">
             <article class="noticias_article">
@@ -109,7 +109,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="js/crear_boton_(modificarHTML).js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <script src="js/Fase_1/crear_boton_(modificarHTML).js"></script> <!-- Link para hacer referencia al archivo .js -->
     <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
 </body>
 </html>
