--- a/contacto.html
+++ b/contacto.html
@@ -110,7 +110,7 @@
             </ul>
         </nav>
     </footer>
-    <script src="js/añadir_pregunta_frecuente.js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <script src="js/Fase_1/añadir_pregunta_frecuente.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
 </body>
 </html>
