--- a/productos.html
+++ b/productos.html
@@ -85,27 +85,27 @@
         </section>
 
         <h2 class="titulo_rellena_formulario">¡Rellena el formulario para recibir ofertas y descuentos!</h2>
-        <form class="formulario" action="/enviar" method="post">
+        <form class="formulario" action="/enviar" method="post" novalidate>
 
             <!--Nombre completo-->
             <label for="nombre">Nombre completo:</label>
-            <input type="text" id="nombre" placeholder="Escribe tu nombre completo" required><br><br>
+            <input type="text" id="nombre" placeholder="Escribe tu nombre completo"><br><br>
 
             <!--Correo electrónico-->
             <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" placeholder="Escribe tu correo electrónico" required><br><br>
+            <input type="email" id="email" placeholder="Escribe tu correo electrónico"><br><br>
 
             <!--Número de teléfono-->
             <label for="telefono">Número de teléfono:</label>
-            <input type="tel" id="telefono" placeholder="Escribe tu número de teléfono" required><br><br>
+            <input type="tel" id="telefono" placeholder="Escribe tu número de teléfono"><br><br>
 
             <!--Dirección-->
             <label for="direccion">Dirección:</label>
-            <input type="text" id="direccion" placeholder="Escribe tu dirección" required><br><br>
+            <input type="text" id="direccion" placeholder="Escribe tu dirección"><br><br>
 
             <!--Código postal-->
             <label for="codigo_postal">Código postal:</label>
-            <input type="text" id="codigo_postal" placeholder="Escribe tu código postal" required><br><br>
+            <input type="text" id="codigo_postal" placeholder="Escribe tu código postal"><br><br>
 
             <!--Género-->
             <label for="genero">Género:</label>
@@ -119,10 +119,6 @@
             <!--Botón de enviar-->
             <button class="form_boton_enviar" type="submit">Enviar</button>
 
-            <!--"type" para obligar a introducir el tipo de carácter en el campo deseado-->
-            <!--"placeholder" muestra un texto en el interior del campo para decirle al usuario lo que debe introducir-->
-            <!--"required" obliga al usuario a completar el campo, sino no puede enviarse el formulario-->
-            <!--"id" identifica el campo con un nombre para la etiqueta <label>-->
         </form>
 
         <h1 class="titulo_solo_por_hoy">¡Sólo por hoy!</h1>
@@ -165,5 +161,7 @@
     <script src="js/Fase_1/cambiar_color_boton_comprar.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <script src="js/Fase_1/eliminar_producto.js"></script> <!-- Link para hacer referencia al archivo .js -->
     <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
+    <script src="js/Fase_2/formulario_validacion.js"></script>
+    <script src="js/Fase_2/sistema_filtros.js"></script>
 </body>
 </html>
