--- a/inicio.html
+++ b/inicio.html
@@ -24,6 +24,7 @@
                 <a href="productos.html" target="_self">Productos</a>
                 <a href="contacto.html" target="_self">Contacto</a>
                 <a href="marcas.html" target="_self">Marcas</a>
+                    <a href="carrito.html" target="_self">Carrito</a>
                 <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
                 <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
                 </li>
@@ -94,6 +95,7 @@
                 <p>Con motivo de la Monterrey Car Week, Bugatti desvela un Chiron dorado muy especial con bocetos de diseño repartidos por su carrocería e interior en un trabajo que ha necesitado de dos años para terminarse. Bugatti Sur Mesure se ha convertido en la mejor aliada para todos aquellos acaudalados clientes par los que tener un simple Bugatti no es suficiente. Este departamento de personalización estenado hace relativamente poco, en 2021, ofrece posibilidades casi infinitas para crear modelos únicos, y uno de los últimos ejemplos lo tenemos en este Bugatti Chiron Super Sport, una suerte de dorado cuaderno de bocetos de diseño rodante capaz de superar los 400 km/h y que ha sido el resultado de un trabajo de dos años.</p>
             </article>
         </section>
+        <h1 class="titulo_galeria_interactiva">Galería Interactiva:</h1>
 
     </main>
     <!-- Footer: Muy importante en la página, representa el pie de página de la web, he usado esta etiqueta para añadir algunos enlaces que suelen estar en el pie de página de las webs -->
@@ -110,6 +112,7 @@
         </nav>
     </footer>
     <script src="js/Fase_1/crear_boton_(modificarHTML).js"></script> <!-- Link para hacer referencia al archivo .js -->
+    <script src="js/Fase_2/galeria_interactiva.js" ></script>
     <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
 </body>
 </html>
