--- a/marcas.html
+++ b/marcas.html
@@ -23,6 +23,7 @@
                     <a href="productos.html" target="_self">Productos</a>
                     <a href="contacto.html" target="_self">Contacto</a>
                     <a href="marcas.html" target="_self">Marcas</a>
+                    <a href="carrito.html" target="_self">Carrito</a>
                     <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
                     <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
                 </li>
