--- a/productos.html
+++ b/productos.html
@@ -22,6 +22,7 @@
                     <a href="productos.html" target="_self">Productos</a>
                     <a href="contacto.html" target="_self">Contacto</a>
                     <a href="marcas.html" target="_self">Marcas</a>
+                    <a href="carrito.html" target="_self">Carrito</a>
                     <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
                     <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
                 </li>
@@ -163,5 +164,7 @@
     <!-- Poner el script al terminar el body para que se ejecute cuando ya se ha cargado todo el archivo -->
     <script src="js/Fase_2/formulario_validacion.js"></script>
     <script src="js/Fase_2/sistema_filtros.js"></script>
+    <script src="js/Fase_2/flujo_libre_carrito.js"></script>
+
 </body>
 </html>
